{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 8,
  "lineage": "7b862ee2-9319-29e8-4538-4077200e269a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "group3_nginx_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007868005aea67c54",
            "arn": "arn:aws:ec2:us-east-1:590184141018:instance/i-074be0a2d35fe6206",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074be0a2d35fe6206",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03717b313cd2aa521",
            "private_dns": "ip-10-0-1-129.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.129",
            "public_ip": "44.203.241.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b95fa5c1ce4bf797",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e55135fb9dd9fcb2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06537f4f5c80fb310",
            "tags": {
              "Name": "devops-group-3"
            },
            "tags_all": {
              "Name": "devops-group-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e55135fb9dd9fcb2"
            ]
          },
          "dependencies": [
            "aws_security_group.group3_nginx_security_group",
            "aws_subnet.group3_nginx_subnet",
            "aws_vpc.group3_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "group3_nginx_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:internet-gateway/igw-0b082f26a7929613b",
            "id": "igw-0b082f26a7929613b",
            "owner_id": "590184141018",
            "tags": {
              "Name": "devops-group-3"
            },
            "tags_all": {
              "Name": "devops-group-3"
            },
            "vpc_id": "vpc-0ed090e98a9f70962"
          },
          "dependencies": [
            "aws_vpc.group3_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "group3_nginx_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:route-table/rtb-06808f38cab192dde",
            "id": "rtb-06808f38cab192dde",
            "owner_id": "590184141018",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b082f26a7929613b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed090e98a9f70962"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.group3_nginx_igw",
            "aws_vpc.group3_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "group3_nginx_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b404179c8191acd",
            "route_table_id": "rtb-06808f38cab192dde",
            "subnet_id": "subnet-06537f4f5c80fb310"
          },
          "dependencies": [
            "aws_internet_gateway.group3_nginx_igw",
            "aws_route_table.group3_nginx_route_table",
            "aws_subnet.group3_nginx_subnet",
            "aws_vpc.group3_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group3_nginx_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:security-group/sg-0e55135fb9dd9fcb2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e55135fb9dd9fcb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241017002758532100000001",
            "name_prefix": "terraform-",
            "owner_id": "590184141018",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-group-3"
            },
            "tags_all": {
              "Name": "devops-group-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed090e98a9f70962"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.group3_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group3_nginx_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:subnet/subnet-06537f4f5c80fb310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06537f4f5c80fb310",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184141018",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-group-3"
            },
            "tags_all": {
              "Name": "devops-group-3"
            },
            "vpc_id": "vpc-0ed090e98a9f70962"
          },
          "dependencies": [
            "aws_vpc.group3_nginx_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "group3_nginx_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141018:vpc/vpc-0ed090e98a9f70962",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-059553510b10f94d1",
            "default_route_table_id": "rtb-0dcb6284630c515ca",
            "default_security_group_id": "sg-0c948816745b8e431",
            "dhcp_options_id": "dopt-0aafbb69718a6bf3e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed090e98a9f70962",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dcb6284630c515ca",
            "owner_id": "590184141018",
            "tags": {
              "Name": "devops-group-3"
            },
            "tags_all": {
              "Name": "devops-group-3"
            }
          }
        }
      ]
    }
  ]
}